added "submission file output"

--- a/predictions/average_over_users.ipynb
+++ b/predictions/average_over_users.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -55,26 +55,16 @@
      "output_type": "stream",
      "text": [
       "(10000, 1000)\n",
-      "[[0. 0. 0. 0. 0. 0. 0. 0. 0. 5. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 3. 0. 5. 0. 4. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 2. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 3. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 2. 0. 0. 0. 5. 0. 3. 0. 0. 0. 0. 0. 5. 2. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 5. 0. 0. 0. 0. 0. 0. 0. 4. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 3. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 5. 0. 0. 0. 3. 0. 0. 0. 5. 3. 0. 0. 0. 5. 0.]\n",
-      " [0. 0. 0. 1. 0. 5. 0. 5. 0. 0. 0. 0. 0. 3. 0. 0. 0. 4. 0. 3.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 5. 0. 4. 0. 0. 0. 0. 0. 0. 0. 2. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 3. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 4. 0. 0. 0. 0. 0. 0. 2. 0. 0. 0. 5. 0. 3. 0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0. 4. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 3. 0. 0. 4. 0. 0. 0. 0. 3. 0. 5. 0. 5. 1. 0. 3. 0.]\n",
-      " [0. 0. 3. 0. 0. 5. 4. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 4. 0.]\n",
-      " [0. 0. 0. 5. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 4. 0. 3. 0. 0. 0. 0. 0. 0. 0. 5. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 3. 0. 0. 4. 2. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n"
+      "[[0. 0. 0. 0. 0. 0. 0. 0. 0. 5.]\n",
+      " [0. 0. 0. 3. 0. 5. 0. 4. 0. 0.]\n",
+      " [0. 0. 0. 2. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 2. 0. 0. 0. 5. 0. 3. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 5. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 5. 0. 0. 0. 3.]\n",
+      " [0. 0. 0. 1. 0. 5. 0. 5. 0. 0.]]\n"
      ]
     }
    ],
@@ -95,7 +85,7 @@
     "    X[row, col] = rating\n",
     "\n",
     "print(X.shape)\n",
-    "print(X[0:20,0:20])"
+    "print(X[0:10,0:10])"
    ]
   },
   {
@@ -107,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -115,85 +105,25 @@
      "output_type": "stream",
      "text": [
       "[[3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 4.68276973\n",
-      "  3.44661922 3.87749706 2.90196078 5.         3.27668659 3.2\n",
-      "  3.47954545 4.4244857  3.14275668 3.43146603 2.65807068 2.40201729\n",
-      "  3.49333333 2.91961415]\n",
+      "  3.44661922 3.87749706 2.90196078 5.        ]\n",
       " [3.37941176 3.50094162 3.48358586 3.         3.55913113 5.\n",
-      "  3.44661922 4.         2.90196078 3.6460717  3.27668659 3.2\n",
-      "  3.47954545 4.4244857  3.14275668 3.43146603 2.65807068 2.40201729\n",
-      "  3.49333333 2.91961415]\n",
+      "  3.44661922 4.         2.90196078 3.6460717 ]\n",
       " [3.37941176 3.50094162 3.48358586 2.         3.55913113 4.68276973\n",
-      "  3.44661922 3.87749706 2.90196078 3.6460717  3.27668659 3.2\n",
-      "  3.47954545 4.4244857  3.14275668 3.43146603 2.65807068 2.40201729\n",
-      "  3.49333333 2.91961415]\n",
+      "  3.44661922 3.87749706 2.90196078 3.6460717 ]\n",
       " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 4.68276973\n",
-      "  3.44661922 3.87749706 2.90196078 3.6460717  3.27668659 3.2\n",
-      "  3.47954545 3.         3.14275668 3.43146603 2.65807068 2.40201729\n",
-      "  3.49333333 2.91961415]\n",
+      "  3.44661922 3.87749706 2.90196078 3.6460717 ]\n",
       " [3.37941176 2.         3.48358586 3.93647282 3.55913113 5.\n",
-      "  3.44661922 3.         2.90196078 3.6460717  3.27668659 3.2\n",
-      "  3.47954545 5.         2.         3.43146603 2.65807068 2.40201729\n",
-      "  3.49333333 2.91961415]\n",
+      "  3.44661922 3.         2.90196078 3.6460717 ]\n",
       " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 5.\n",
-      "  3.44661922 3.87749706 2.90196078 3.6460717  3.27668659 3.2\n",
-      "  3.47954545 4.         3.14275668 3.43146603 2.65807068 2.40201729\n",
-      "  3.49333333 2.91961415]\n",
+      "  3.44661922 3.87749706 2.90196078 3.6460717 ]\n",
       " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 4.68276973\n",
-      "  3.44661922 3.87749706 2.90196078 3.6460717  3.27668659 3.2\n",
-      "  3.47954545 4.4244857  3.14275668 3.43146603 2.65807068 2.40201729\n",
-      "  3.49333333 2.91961415]\n",
+      "  3.44661922 3.87749706 2.90196078 3.6460717 ]\n",
       " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 4.68276973\n",
-      "  3.44661922 3.87749706 2.90196078 3.6460717  3.27668659 3.2\n",
-      "  3.47954545 4.4244857  3.14275668 3.         2.65807068 2.40201729\n",
-      "  3.49333333 2.91961415]\n",
+      "  3.44661922 3.87749706 2.90196078 3.6460717 ]\n",
       " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 5.\n",
-      "  3.44661922 3.87749706 2.90196078 3.         3.27668659 3.2\n",
-      "  3.47954545 5.         3.         3.43146603 2.65807068 2.40201729\n",
-      "  5.         2.91961415]\n",
+      "  3.44661922 3.87749706 2.90196078 3.        ]\n",
       " [3.37941176 3.50094162 3.48358586 1.         3.55913113 5.\n",
-      "  3.44661922 5.         2.90196078 3.6460717  3.27668659 3.2\n",
-      "  3.47954545 3.         3.14275668 3.43146603 2.65807068 4.\n",
-      "  3.49333333 3.        ]\n",
-      " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 4.68276973\n",
-      "  3.44661922 5.         2.90196078 4.         3.27668659 3.2\n",
-      "  3.47954545 4.4244857  3.14275668 3.43146603 2.65807068 2.\n",
-      "  3.49333333 2.91961415]\n",
-      " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 4.68276973\n",
-      "  3.44661922 3.87749706 2.90196078 3.6460717  3.27668659 3.2\n",
-      "  3.47954545 3.         3.14275668 3.43146603 2.65807068 2.40201729\n",
-      "  3.49333333 2.91961415]\n",
-      " [3.37941176 3.50094162 4.         3.93647282 3.55913113 4.68276973\n",
-      "  3.44661922 3.87749706 2.90196078 2.         3.27668659 3.2\n",
-      "  3.47954545 5.         3.14275668 3.         2.65807068 2.40201729\n",
-      "  3.49333333 2.91961415]\n",
-      " [3.37941176 1.         3.48358586 3.93647282 4.         4.68276973\n",
-      "  3.44661922 3.87749706 2.90196078 3.6460717  3.27668659 3.2\n",
-      "  3.47954545 4.4244857  3.14275668 3.43146603 2.65807068 2.40201729\n",
-      "  3.49333333 2.91961415]\n",
-      " [3.37941176 3.50094162 3.48358586 3.         3.55913113 4.68276973\n",
-      "  4.         3.87749706 2.90196078 3.6460717  3.27668659 3.\n",
-      "  3.47954545 5.         3.14275668 5.         1.         2.40201729\n",
-      "  3.         2.91961415]\n",
-      " [3.37941176 3.50094162 3.         3.93647282 3.55913113 5.\n",
-      "  4.         3.87749706 2.90196078 3.6460717  3.27668659 3.2\n",
-      "  3.47954545 4.4244857  3.14275668 3.43146603 2.65807068 2.40201729\n",
-      "  3.49333333 2.91961415]\n",
-      " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 4.68276973\n",
-      "  3.44661922 3.87749706 2.90196078 3.6460717  3.27668659 3.2\n",
-      "  3.47954545 4.4244857  3.14275668 3.43146603 2.65807068 2.40201729\n",
-      "  4.         2.91961415]\n",
-      " [3.37941176 3.50094162 3.48358586 5.         3.55913113 4.68276973\n",
-      "  3.44661922 3.87749706 2.90196078 3.6460717  3.27668659 3.2\n",
-      "  3.47954545 4.4244857  3.14275668 3.43146603 2.65807068 2.40201729\n",
-      "  3.49333333 2.91961415]\n",
-      " [3.37941176 3.50094162 3.48358586 4.         3.55913113 3.\n",
-      "  3.44661922 3.87749706 2.90196078 3.6460717  3.27668659 3.2\n",
-      "  3.47954545 5.         3.14275668 3.43146603 2.65807068 2.40201729\n",
-      "  3.49333333 2.91961415]\n",
-      " [3.37941176 3.50094162 3.48358586 3.         3.55913113 4.68276973\n",
-      "  4.         2.         2.90196078 3.6460717  3.27668659 3.2\n",
-      "  3.47954545 4.4244857  3.14275668 3.43146603 2.65807068 2.40201729\n",
-      "  3.49333333 2.91961415]]\n"
+      "  3.44661922 5.         2.90196078 3.6460717 ]]\n"
      ]
     }
    ],
@@ -205,7 +135,71 @@
     "for column in range(X.shape[1]):\n",
     "    no_rating = (X[:, column] == 0)\n",
     "    X_pred[no_rating, column] = average_per_item[column]\n",
-    "print(X_pred[0:20, 0:20])"
+    "print(X_pred[0:10, 0:10])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Output submission file "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings = []\n",
+    "with open('../data/sampleSubmission.csv') as file:\n",
+    "    file.readline() # remove header\n",
+    "    for line in file:\n",
+    "        key, value = line.split(\",\")\n",
+    "        rating = int(value)\n",
+    "        row_string, col_string = key.split(\"_\")\n",
+    "        row = int(row_string[1:])\n",
+    "        col = int(col_string[1:])\n",
+    "        ratings.append((row-1, col-1, rating))\n",
+    "\n",
+    "output = \"Id,Prediction\\n\"\n",
+    "for (row, col, _) in ratings:\n",
+    "    output += \"r%d_c%d,%f\\n\" % (row + 1, col + 1, X_pred[row, col])\n",
+    "# print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Id,Prediction\n",
+      "r37_c1,3.379412\n",
+      "r73_c1,3.379412\n",
+      "r156_c1,3.379412\n",
+      "r160_c1,3.379412\n",
+      "r248_c1,3.379412\n",
+      "r25\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(output[0:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = \"submission_average_over_users_0.csv\" \n",
+    "with open(file_name, 'w') as output_file:\n",
+    "    output_file.write(output)"
    ]
   },
   {
