add helper module

--- a/predictions/average_over_users.ipynb
+++ b/predictions/average_over_users.ipynb
@@ -16,15 +16,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'helpers'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-28-d3a6adc27484>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mhelpers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mload_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'helpers'"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "\n",
     "import matplotlib\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from helpers import load_data"
    ]
   },
   {
@@ -40,52 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X has dim (USER_COUNT x ITEM_COUNT)\n",
-    "USER_COUNT = 10000\n",
-    "ITEM_COUNT = 1000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(10000, 1000)\n",
-      "[[0. 0. 0. 0. 0. 0. 0. 0. 0. 5.]\n",
-      " [0. 0. 0. 3. 0. 5. 0. 4. 0. 0.]\n",
-      " [0. 0. 0. 2. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 2. 0. 0. 0. 5. 0. 3. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 5. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 5. 0. 0. 0. 3.]\n",
-      " [0. 0. 0. 1. 0. 5. 0. 5. 0. 0.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "ratings = []\n",
-    "with open('../data/data_train.csv') as file:\n",
-    "    file.readline() # remove header\n",
-    "    for line in file:\n",
-    "        key, value = line.split(\",\")\n",
-    "        rating = int(value)\n",
-    "        row_string, col_string = key.split(\"_\")\n",
-    "        row = int(row_string[1:])\n",
-    "        col = int(col_string[1:])\n",
-    "        ratings.append((row-1, col-1, rating))\n",
-    "\n",
-    "X = np.zeros([USER_COUNT, ITEM_COUNT])\n",
-    "for (row, col, rating) in ratings:\n",
-    "    X[row, col] = rating\n",
-    "\n",
-    "print(X.shape)\n",
-    "print(X[0:10,0:10])"
+    "X = load_data()"
    ]
   },
   {
