--- a/src/average_over_items.ipynb
+++ b/src/average_over_items.ipynb
@@ -26,7 +26,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from helpers import load_data, write_submission_file"
+    "from helpers import load_data"
    ]
   },
   {
@@ -40,24 +40,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 5. 3. 3.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " ...\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 2. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X = load_data()\n",
-    "print(X[0:10])"
+    "X = load_data()"
    ]
   },
   {
@@ -69,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -119,24 +104,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings = []\n",
+    "with open('../data/sampleSubmission.csv') as file:\n",
+    "    file.readline() # remove header\n",
+    "    for line in file:\n",
+    "        key, value = line.split(\",\")\n",
+    "        rating = int(value)\n",
+    "        row_string, col_string = key.split(\"_\")\n",
+    "        row = int(row_string[1:])\n",
+    "        col = int(col_string[1:])\n",
+    "        ratings.append((row-1, col-1, rating))\n",
+    "\n",
+    "output = \"Id,Prediction\\n\"\n",
+    "for (row, col, _) in ratings:\n",
+    "    output += \"r%d_c%d,%f\\n\" % (row + 1, col + 1, X_pred[row, col])\n",
+    "# print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'write_submission_file' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-90db326a6903>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwrite_submission_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'submission_average_over_users_0.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'write_submission_file' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Id,Prediction\n",
+      "r37_c1,3.379412\n",
+      "r73_c1,3.379412\n",
+      "r156_c1,3.379412\n",
+      "r160_c1,3.379412\n",
+      "r248_c1,3.379412\n",
+      "r25\n"
      ]
     }
    ],
    "source": [
-    "output = write_submission_file(X_pred, 'submission_average_over_users_0.csv')\n",
     "print(output[0:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = \"submission_average_over_users_0.csv\" \n",
+    "with open(file_name, 'w') as output_file:\n",
+    "    output_file.write(output)"
    ]
   },
   {
