--- a/src/average_over_items.ipynb
+++ b/src/average_over_items.ipynb
@@ -26,7 +26,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from helpers import load_data"
+    "from helpers import load_data, write_submission_file"
    ]
   },
   {
@@ -40,9 +40,27 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 0. 0. 0. 0. 0. 5.]\n",
+      " [0. 0. 0. 3. 0. 5. 0. 4. 0. 0.]\n",
+      " [0. 0. 0. 2. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 2. 0. 0. 0. 5. 0. 3. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 5. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 5. 0. 0. 0. 3.]\n",
+      " [0. 0. 0. 1. 0. 5. 0. 5. 0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
-    "X = load_data()"
+    "X = load_data()\n",
+    "print(X[0:10,0:10])"
    ]
   },
   {
@@ -106,29 +124,6 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "ratings = []\n",
-    "with open('../data/sampleSubmission.csv') as file:\n",
-    "    file.readline() # remove header\n",
-    "    for line in file:\n",
-    "        key, value = line.split(\",\")\n",
-    "        rating = int(value)\n",
-    "        row_string, col_string = key.split(\"_\")\n",
-    "        row = int(row_string[1:])\n",
-    "        col = int(col_string[1:])\n",
-    "        ratings.append((row-1, col-1, rating))\n",
-    "\n",
-    "output = \"Id,Prediction\\n\"\n",
-    "for (row, col, _) in ratings:\n",
-    "    output += \"r%d_c%d,%f\\n\" % (row + 1, col + 1, X_pred[row, col])\n",
-    "# print(output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -145,18 +140,8 @@
     }
    ],
    "source": [
+    "output = write_submission_file(X_pred, \"submission_average_over_users_0.csv\")\n",
     "print(output[0:100])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_name = \"submission_average_over_users_0.csv\" \n",
-    "with open(file_name, 'w') as output_file:\n",
-    "    output_file.write(output)"
    ]
   },
   {
@@ -183,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
