--- a/src/average_over_items.ipynb
+++ b/src/average_over_items.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Average over users for each item"
+    "# Average over items for each user"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Idea: impute missing values by taking average rating over users for each item"
+    "Idea: impute missing values by taking average rating over items for each user"
    ]
   },
   {
@@ -20,11 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "\n",
-    "import matplotlib\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "from helpers import load_data, write_submission_file"
    ]
@@ -67,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Impute missing entries (average rating per item)"
+    "## Impute missing entries (average rating per user)"
    ]
   },
   {
@@ -79,38 +75,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 4.68276973\n",
-      "  3.44661922 3.87749706 2.90196078 5.        ]\n",
-      " [3.37941176 3.50094162 3.48358586 3.         3.55913113 5.\n",
-      "  3.44661922 4.         2.90196078 3.6460717 ]\n",
-      " [3.37941176 3.50094162 3.48358586 2.         3.55913113 4.68276973\n",
-      "  3.44661922 3.87749706 2.90196078 3.6460717 ]\n",
-      " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 4.68276973\n",
-      "  3.44661922 3.87749706 2.90196078 3.6460717 ]\n",
-      " [3.37941176 2.         3.48358586 3.93647282 3.55913113 5.\n",
-      "  3.44661922 3.         2.90196078 3.6460717 ]\n",
-      " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 5.\n",
-      "  3.44661922 3.87749706 2.90196078 3.6460717 ]\n",
-      " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 4.68276973\n",
-      "  3.44661922 3.87749706 2.90196078 3.6460717 ]\n",
-      " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 4.68276973\n",
-      "  3.44661922 3.87749706 2.90196078 3.6460717 ]\n",
-      " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 5.\n",
-      "  3.44661922 3.87749706 2.90196078 3.        ]\n",
-      " [3.37941176 3.50094162 3.48358586 1.         3.55913113 5.\n",
-      "  3.44661922 5.         2.90196078 3.6460717 ]]\n"
+      "[[4.04347826 4.04347826 4.04347826 4.04347826 4.04347826 4.04347826\n",
+      "  4.04347826 4.04347826 4.04347826 5.        ]\n",
+      " [3.77181208 3.77181208 3.77181208 3.         3.77181208 5.\n",
+      "  3.77181208 4.         3.77181208 3.77181208]\n",
+      " [3.52325581 3.52325581 3.52325581 2.         3.52325581 3.52325581\n",
+      "  3.52325581 3.52325581 3.52325581 3.52325581]\n",
+      " [3.8        3.8        3.8        3.8        3.8        3.8\n",
+      "  3.8        3.8        3.8        3.8       ]\n",
+      " [3.98507463 2.         3.98507463 3.98507463 3.98507463 5.\n",
+      "  3.98507463 3.         3.98507463 3.98507463]\n",
+      " [4.36686391 4.36686391 4.36686391 4.36686391 4.36686391 5.\n",
+      "  4.36686391 4.36686391 4.36686391 4.36686391]\n",
+      " [4.12903226 4.12903226 4.12903226 4.12903226 4.12903226 4.12903226\n",
+      "  4.12903226 4.12903226 4.12903226 4.12903226]\n",
+      " [4.11538462 4.11538462 4.11538462 4.11538462 4.11538462 4.11538462\n",
+      "  4.11538462 4.11538462 4.11538462 4.11538462]\n",
+      " [3.97191011 3.97191011 3.97191011 3.97191011 3.97191011 5.\n",
+      "  3.97191011 3.97191011 3.97191011 3.        ]\n",
+      " [3.82242991 3.82242991 3.82242991 1.         3.82242991 5.\n",
+      "  3.82242991 5.         3.82242991 3.82242991]]\n"
      ]
     }
    ],
    "source": [
-    "y = X.sum(axis=0)\n",
-    "rating_counts = np.count_nonzero(X, axis =0)\n",
-    "average_per_item = y/rating_counts\n",
+    "y = X.sum(axis=1)\n",
+    "rating_counts = np.count_nonzero(X, axis =1)\n",
+    "average_per_user = y/rating_counts\n",
     "X_pred = np.copy(X)\n",
-    "for column in range(X.shape[1]):\n",
-    "    no_rating = (X[:, column] == 0)\n",
-    "    X_pred[no_rating, column] = average_per_item[column]\n",
-    "print(X_pred[0:10, 0:10])"
+    "for row in range(X.shape[0]):\n",
+    "    no_rating = (X[row, :] == 0)\n",
+    "    X_pred[row, no_rating] = average_per_user[row]\n",
+    "print(X_pred[0:10, 0:10])\n"
    ]
   },
   {
@@ -130,11 +126,11 @@
      "output_type": "stream",
      "text": [
       "Id,Prediction\n",
-      "r37_c1,3.379412\n",
-      "r73_c1,3.379412\n",
-      "r156_c1,3.379412\n",
-      "r160_c1,3.379412\n",
-      "r248_c1,3.379412\n",
+      "r37_c1,3.757732\n",
+      "r73_c1,3.540000\n",
+      "r156_c1,4.230216\n",
+      "r160_c1,3.692308\n",
+      "r248_c1,3.928144\n",
       "r25\n"
      ]
     }
@@ -168,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
