--- a/src/average_over_users.ipynb
+++ b/src/average_over_users.ipynb
@@ -4,19 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Average over users for each item\n",
-    "Idea: impute missing values by taking average rating over users for each item\n"
+    "# Average over users for each item"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Idea: impute missing values by taking average rating over users for each item"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "from helpers import load_data, write_submission_file"
    ]
@@ -30,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,50 +63,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Impute missing entries (average rating per user)"
+    "## Impute missing entries (average rating per item)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[4.04347826 4.04347826 4.04347826 4.04347826 4.04347826 4.04347826\n",
-      "  4.04347826 4.04347826 4.04347826 5.        ]\n",
-      " [3.77181208 3.77181208 3.77181208 3.         3.77181208 5.\n",
-      "  3.77181208 4.         3.77181208 3.77181208]\n",
-      " [3.52325581 3.52325581 3.52325581 2.         3.52325581 3.52325581\n",
-      "  3.52325581 3.52325581 3.52325581 3.52325581]\n",
-      " [3.8        3.8        3.8        3.8        3.8        3.8\n",
-      "  3.8        3.8        3.8        3.8       ]\n",
-      " [3.98507463 2.         3.98507463 3.98507463 3.98507463 5.\n",
-      "  3.98507463 3.         3.98507463 3.98507463]\n",
-      " [4.36686391 4.36686391 4.36686391 4.36686391 4.36686391 5.\n",
-      "  4.36686391 4.36686391 4.36686391 4.36686391]\n",
-      " [4.12903226 4.12903226 4.12903226 4.12903226 4.12903226 4.12903226\n",
-      "  4.12903226 4.12903226 4.12903226 4.12903226]\n",
-      " [4.11538462 4.11538462 4.11538462 4.11538462 4.11538462 4.11538462\n",
-      "  4.11538462 4.11538462 4.11538462 4.11538462]\n",
-      " [3.97191011 3.97191011 3.97191011 3.97191011 3.97191011 5.\n",
-      "  3.97191011 3.97191011 3.97191011 3.        ]\n",
-      " [3.82242991 3.82242991 3.82242991 1.         3.82242991 5.\n",
-      "  3.82242991 5.         3.82242991 3.82242991]]\n"
+      "[[3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 4.68276973\n",
+      "  3.44661922 3.87749706 2.90196078 5.        ]\n",
+      " [3.37941176 3.50094162 3.48358586 3.         3.55913113 5.\n",
+      "  3.44661922 4.         2.90196078 3.6460717 ]\n",
+      " [3.37941176 3.50094162 3.48358586 2.         3.55913113 4.68276973\n",
+      "  3.44661922 3.87749706 2.90196078 3.6460717 ]\n",
+      " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 4.68276973\n",
+      "  3.44661922 3.87749706 2.90196078 3.6460717 ]\n",
+      " [3.37941176 2.         3.48358586 3.93647282 3.55913113 5.\n",
+      "  3.44661922 3.         2.90196078 3.6460717 ]\n",
+      " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 5.\n",
+      "  3.44661922 3.87749706 2.90196078 3.6460717 ]\n",
+      " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 4.68276973\n",
+      "  3.44661922 3.87749706 2.90196078 3.6460717 ]\n",
+      " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 4.68276973\n",
+      "  3.44661922 3.87749706 2.90196078 3.6460717 ]\n",
+      " [3.37941176 3.50094162 3.48358586 3.93647282 3.55913113 5.\n",
+      "  3.44661922 3.87749706 2.90196078 3.        ]\n",
+      " [3.37941176 3.50094162 3.48358586 1.         3.55913113 5.\n",
+      "  3.44661922 5.         2.90196078 3.6460717 ]]\n"
      ]
     }
    ],
    "source": [
-    "y = X.sum(axis=1)\n",
-    "rating_counts = np.count_nonzero(X, axis =1)\n",
+    "y = X.sum(axis=0)\n",
+    "rating_counts = np.count_nonzero(X, axis=0)\n",
     "average_per_item = y/rating_counts\n",
     "X_pred = np.copy(X)\n",
-    "for row in range(X.shape[0]):\n",
-    "    no_rating = (X[row, :] == 0)\n",
-    "    X_pred[row, no_rating] = average_per_item[row]\n",
-    "print(X_pred[0:10, 0:10])\n"
+    "for column in range(X.shape[1]):\n",
+    "    no_rating = (X[:, column] == 0)\n",
+    "    X_pred[no_rating, column] = average_per_item[column]\n",
+    "print(X_pred[0:10, 0:10])"
    ]
   },
   {
@@ -114,25 +118,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Id,Prediction\n",
-      "r37_c1,3.757732\n",
-      "r73_c1,3.540000\n",
-      "r156_c1,4.230216\n",
-      "r160_c1,3.692308\n",
-      "r248_c1,3.928144\n",
-      "r25\n"
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-90db326a6903>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwrite_submission_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'submission_average_over_users_0.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Desktop/CIL_project/src/helpers.py\u001b[0m in \u001b[0;36mwrite_submission_file\u001b[0;34m(X_pred, file_name)\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m     \u001b[0;31m# write file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 43\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/predictions_csv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0moutput_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     44\u001b[0m         \u001b[0mhiuhiuhiuh\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m         \u001b[0moutput_file\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
      ]
     }
    ],
    "source": [
-    "output = write_submission_file(X_pred, \"submission_average_over_users_0.csv\")\n",
+    "output = write_submission_file(X_pred, 'submission_average_over_users_0.csv')\n",
     "print(output[0:100])"
    ]
   },
@@ -160,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
