--- a/src/average_over_items.ipynb
+++ b/src/average_over_items.ipynb
@@ -106,7 +106,7 @@
     "for row in range(X.shape[0]):\n",
     "    no_rating = (X[row, :] == 0)\n",
     "    X_pred[row, no_rating] = average_per_user[row]\n",
-    "print(X_pred[0:10, 0:10])\n"
+    "print(X_pred[0:10, 0:10])"
    ]
   },
   {
@@ -145,7 +145,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -157,7 +159,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
