implemented RandomizedSearchCV für SVD_surprise

--- a/src/SVD_surprise.ipynb
+++ b/src/SVD_surprise.ipynb
@@ -11,13 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import helpers\n",
     "from surprise_helpers import CustomReader, get_ratings_from_predictions\n",
-    "from surprise import Reader, Dataset"
+    "from surprise import Reader, Dataset\n",
+    "from surprise.model_selection.search import RandomizedSearchCV\n",
+    "from surprise.prediction_algorithms.matrix_factorization import SVD"
    ]
   },
   {
@@ -42,15 +44,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training and validation\n"
+    "## Grid Search over params\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:  2.9min remaining:    0.0s\n"
+     ]
+    }
+   ],
+   "source": [
+    "param_grid = {'n_epochs': [5, 20], \n",
+    "              'lr_all': [0.002, 0.005],\n",
+    "              'reg_all': [0.02, 0.6],\n",
+    "              'n_factors': [50,150],\n",
+    "              'biased': [True, False]\n",
+    "             }      \n",
+    "        \n",
+    "\n",
+    "gs = RandomizedSearchCV(algo_class=SVD, param_distributions=param_grid, measures=['rmse'], cv=5, joblib_verbose=10)\n",
+    "gs.fit(data)\n",
+    "\n",
+    "# best RMSE score\n",
+    "print(gs.best_score['rmse'])\n",
+    "\n",
+    "# combination of parameters that gave the best RMSE score\n",
+    "print(gs.best_params['rmse'])"
+   ]
   },
   {
    "cell_type": "markdown",
