finished SVD_surprise, made predictions with tuned params

--- a/src/SVD_surprise.ipynb
+++ b/src/SVD_surprise.ipynb
@@ -11,10 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy import stats\n",
+    "\n",
     "import helpers\n",
     "from surprise_helpers import CustomReader, get_ratings_from_predictions\n",
     "from surprise import Reader, Dataset\n",
@@ -31,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,32 +48,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Grid Search over params\n"
+    "## Search over params\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:  2.9min remaining:    0.0s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "param_grid = {'n_epochs': [5, 20], \n",
-    "              'lr_all': [0.002, 0.005],\n",
-    "              'reg_all': [0.02, 0.6],\n",
-    "              'n_factors': [50,150],\n",
-    "              'biased': [True, False]\n",
+    "param_grid = {'n_epochs': stats.randint(5,20), \n",
+    "              'lr_all': stats.uniform(0.002,0.005),\n",
+    "              'reg_all': stats.uniform(0.02,0.6),\n",
+    "              'n_factors': stats.randint(50,150),\n",
     "             }      \n",
     "        \n",
     "\n",
-    "gs = RandomizedSearchCV(algo_class=SVD, param_distributions=param_grid, measures=['rmse'], cv=5, joblib_verbose=10)\n",
+    "gs = RandomizedSearchCV(algo_class=SVD, param_distributions=param_grid, measures=['rmse'], \n",
+    "                        cv=10, joblib_verbose=100, n_jobs=-1, n_iter=100)\n",
     "gs.fit(data)\n",
     "\n",
     "# best RMSE score\n",
@@ -80,8 +76,157 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame.from_dict(gs.cv_results)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Results: params \n",
+    "\n",
+    "note: run on Leonhard cluster (20 cores and 22GB mem)\n",
+    "cv=10\n",
+    "\n",
+    "0.996617863993\n",
+    "{'lr_all': 0.0080655611939959484, 'n_epochs': 19, 'n_factors': 9, 'reg_all': 0.042201220509606799}\n",
+    "\n",
+    "0.998777808857\n",
+    "{'n_factors': 5}\n",
+    "\n",
+    "1.00085021593\n",
+    "{'lr_all': 0.0035314408264436933, 'n_epochs': 19, 'n_factors': 50, 'reg_all': 0.027105037999075404}\n",
+    "\n",
+    "1.00534587695\n",
+    "{'lr_all': 0.0034656840329879137, 'n_epochs': 10, 'n_factors': 42, 'reg_all': 0.12231592623013628}\n",
+    "\n",
+    "1.00104676332\n",
+    "{'lr_all': 0.0066032381482039656, 'n_epochs': 17, 'n_factors': 107, 'reg_all': 0.036362623151074552}\n",
+    "\n",
+    "1.00382744957\n",
+    "{'lr_all': 0.0045664408289589759, 'n_epochs': 12, 'n_factors': 9, 'reg_all': 0.04029560227746723}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x13bef8940>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# choose optimal params from above\n",
+    "algo = SVD(n_epochs=19, lr_all=0.0080655611939959484, reg_all=0.042201220509606799, n_factors=9)\n",
+    "\n",
+    "# train \n",
+    "algo.fit(data.build_full_trainset())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predicting\n",
+    "We load the test data to predict."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Prediction(uid=36, iid=0, r_ui=3.0, est=3.3141439284719922, details={'was_impossible': False})"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_file_path = helpers.get_test_file_path()\n",
+    "test_data = Dataset.load_from_file(test_file_path, reader=reader)\n",
+    "testset = test_data.construct_testset(test_data.raw_ratings)\n",
+    "predictions = algo.test(testset)\n",
+    "predictions[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need to convert the predictions into the right format."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings = get_ratings_from_predictions(predictions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can write the file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Id,Prediction\n",
+      "r37_c1,3.314144\n",
+      "r73_c1,3.072523\n",
+      "r156_c1,3.743513\n",
+      "r160_c1,3.346467\n",
+      "r248_c1,3.582211\n",
+      "r25\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = helpers.write_submission(ratings, 'submission_surprise_SVD_0.csv')\n",
+    "print(output[0:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
