--- a/src/SVD_surprise.ipynb
+++ b/src/SVD_surprise.ipynb
@@ -10,6 +10,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### [KBV09] Yehuda Koren. Matrix factorization techniques for recommender systems.\n",
+    "\n",
+    "see [Matrix Factorization techniques](https://datajobs.com/data-science-repo/Recommender-Systems-[Netflix].pdf)\n",
+    "\n",
+    "explicit feedback = (user,item, rating) represented as user-item matrix.\n",
+    "\n",
+    "Matrix factorization models map both users and items to a joint latent factor space of dimensionality f, such that user-item interactions are modeled as inner products in that space.\n",
+    "\n",
+    "Assume $r_{ui} = q_i^Tp_u$, how to compute $q_i, p_u$?\n",
+    "\n",
+    "Want to minimize $min_{p_u, q_i} \\sum_{x_{ui}}(r_{ui}-p_u^Tq_i)^2 + \\lambda ($$ \\lVert q_i \\rVert $$^2 + $$ \\lVert p_u \\rVert $$^2)$\n",
+    "\n",
+    "1. Can use SGD to optimize (see Simon Funk) <- focus here\n",
+    "2. Can use ALS (convexifies the objective)\n",
+    "\n",
+    "__Adding Biases__:\n",
+    "some users tend to give higher/lower ratings then others. And some items tend to receive higher/lower ratings than others (relatively seen).\n",
+    "\n",
+    "Bias involved in rating $r_{ui}$ is denoted by $b_{ui}$:<br/>\n",
+    "$b_{ui} = \\mu + b_i + b_u$ <br/>\n",
+    "$\\mu$: average rating over all movies <br/>\n",
+    "$b_i$: deviation of item i from average <br/>\n",
+    "$b_u$: deviation of user u from average <br/>\n",
+    "\n",
+    "estimate of rating is: <br/>\n",
+    "$r_{ui} = \\mu + b_i + b_u + q_i^Tp_u$\n",
+    "\n",
+    "adjusted objective: <br/>\n",
+    " $min_{p_u, q_i} \\sum_{x_{ui}}(r_{ui}-\\mu-b_u-b_i -p_u^Tq_i)^2 + \\lambda ($$ \\lVert q_i \\rVert $$^2 + $$ \\lVert p_u \\rVert $$^2 + b_u^2 + b_i^2)$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -121,23 +157,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x13bef8940>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x10f07c128>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# choose optimal params from above\n",
-    "algo = SVD(n_epochs=19, lr_all=0.0080655611939959484, reg_all=0.042201220509606799, n_factors=9)\n",
+    "#algo = SVD(n_epochs=19, lr_all=0.0080655611939959484, reg_all=0.042201220509606799, n_factors=9)\n",
+    "algo = SVD( n_factors=5)\n",
     "\n",
     "# train \n",
     "algo.fit(data.build_full_trainset())"
@@ -153,16 +190,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Prediction(uid=36, iid=0, r_ui=3.0, est=3.3141439284719922, details={'was_impossible': False})"
+       "Prediction(uid=36, iid=0, r_ui=3.0, est=3.175193448906952, details={'was_impossible': False})"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -208,17 +245,17 @@
      "output_type": "stream",
      "text": [
       "Id,Prediction\n",
-      "r37_c1,3.314144\n",
-      "r73_c1,3.072523\n",
-      "r156_c1,3.743513\n",
-      "r160_c1,3.346467\n",
-      "r248_c1,3.582211\n",
+      "r37_c1,3.175193\n",
+      "r73_c1,3.022989\n",
+      "r156_c1,3.743569\n",
+      "r160_c1,3.393022\n",
+      "r248_c1,3.336667\n",
       "r25\n"
      ]
     }
    ],
    "source": [
-    "output = helpers.write_submission(ratings, 'submission_surprise_SVD_0.csv')\n",
+    "output = helpers.write_submission(ratings, 'submission_surprise_SVD_1.csv')\n",
     "print(output[0:100])"
    ]
   },
