added theory description for surprise NMF

--- a/src/NMF_Surprise.ipynb
+++ b/src/NMF_Surprise.ipynb
@@ -10,6 +10,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A collaborative filtering algorithm based on Non-negative Matrix Factorization.\n",
+    "### [LZXZ14]Luo, Zhou, Xia and Zhu. And efficient non-negative matrix factorization-based approach to collab filtering for recommender systems.\n",
+    "This algorithm is very similar to SVD. The prediction $r̂_{ui}$ is set as:\n",
+    "$r̂_{ui}=q^T_i*p_u$,\n",
+    "where user and item factors are kept positive.\n",
+    "The optimization procedure is a (regularized) stochastic gradient descent with a specific choice of step size that ensures non-negativity of factors, provided that their initial values are also positive.\n",
+    "\n",
+    "At each step of the SGD procedure, the factors $f$ for user $u$ and item $i$ are updated as follows:\n",
+    "$p_{uf} = p_{uf} * \\frac{\\sum_{i \\in I_u} q_{if} * r_{ui}}{\\sum_{i \\in I_u} q_{if} * r̂_{ui} + \\lambda_u |{I_u}| p_{uf}}$\n",
+    "\n",
+    "$q_{if} = q_{if} * \\frac{\\sum_{u \\in U_i} p_{uf} * r_{ui}}{\\sum_{u \\in U_i} p_{uf} * r̂_{ui} + \\lambda_i |{U_i}| q_{if}}$\n",
+    "\n",
+    "where $\\lambda_u$ and $\\lambda_i$ are regularization parameters.\n",
+    "\n",
+    "A biased version is available by setting $\\textit{biased}$ parameter to $\\textit{True}$. In this case, the prediction is set as\n",
+    "$r̂_{ui}=μ+b_u+b_i+q^T_ip_u$\n",
+    "still ensuring positive factors."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -299,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
